Implemented tick tock app and removed streams to remove null statement

--- a/channelsproj/notifier/templates/home.html
+++ b/channelsproj/notifier/templates/home.html
@@ -14,8 +14,8 @@
         document.addEventListener('DOMContentLoaded', function () {
             const webSocketBridge = new channels.WebSocketBridge();
             webSocketBridge.connect('/ws/');
-            webSocketBridge.listen(function(action, stream) {
-            console.log("RESPONSE:", action, stream);
+            webSocketBridge.listen(function(action) {
+            console.log("RESPONSE:", action);
             });
             /* 16:31 */
             document.ws = webSocketBridge; /* for debugging */
