--- a/channelsproj/notifier/templates/home.html
+++ b/channelsproj/notifier/templates/home.html
@@ -1,26 +1,29 @@
 {% load static %}
-{% comment %} load staticfiles was deprecated {% endcomment %}
-{% comment %} webSocketBridge is deprecated {% endcomment %}
-{% comment %} Make one yourself {% endcomment %}
-
 <html>
-    <head>
-        <title>Notifier</title>
-        <script src="{% static '/channels/js/websocketbridge.js' %}" type="text/javascript"></script>
-    </head>
-    <body>
-        <h1>Notifier</h1>
-        <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const webSocketBridge = new channels.WebSocketBridge();
-            webSocketBridge.connect('/ws/');
-            webSocketBridge.listen(function(action) {
-            console.log("RESPONSE:", action);
-            });
-            /* 16:31 */
-            document.ws = webSocketBridge; /* for debugging */
-            console.log(document.ws);
-        })
-        </script>
-    </body>
+  <head>
+    <title>Notifier</title>
+    <script src="{% static '/channels/js/websocketbridge.js' %}" type="text/javascript"></script>
+  </head>
+  <body>
+    <h1>Notifier</h1>
+    <p>Notifications</p>
+    <ul id="notifylist"></ul>
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const webSocketBridge = new channels.WebSocketBridge();
+      const nl = document.querySelector("#notifylist");
+      
+      webSocketBridge.connect('/notifications/');
+      webSocketBridge.listen(function(action, stream) {
+        console.log("RESPONSE:", action);
+        if(action.event == "New User") {
+          var el = document.createElement("li");
+          el.innerHTML = `New user <b>${action.username}</b> has joined!`;
+          nl.appendChild(el);
+        }
+      })
+      document.ws = webSocketBridge; /* for debugging */
+    })
+    </script>
+  </body>
 </html>
